--- a/node-backport/package.json
+++ b/node-backport/package.json
@@ -7,6 +7,10 @@
   "engines": {
     "node": ">=12.0.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/grammyjs/grammY"
+  },
   "scripts": {
     "build": "node --max-old-space-size=4096 ./node_modules/.bin/tsc"
   },
@@ -23,9 +27,17 @@
     "ts-morph": "^10.0.1",
     "typescript": "4.2.2"
   },
+  "files": [
+    "./out/"
+  ],
   "main": "./out/mod.js",
   "exports": {
     "import": "./out/esm/wrapper.js",
     "require": "./out/mod.js"
-  }
+  },
+  "keywords": [
+    "telegram",
+    "bot",
+    "api"
+  ]
 }
