--- a/node-backport/package.json
+++ b/node-backport/package.json
@@ -28,8 +28,7 @@
     "typescript": "4.2.2"
   },
   "files": [
-    "./out/**/*.js",
-    "./out/**/*.d.ts"
+    "out/"
   ],
   "main": "./out/mod.js",
   "exports": {
