--- a/node-backport/package.json
+++ b/node-backport/package.json
@@ -7,6 +7,7 @@
   "engines": {
     "node": ">=12.0.0"
   },
+  "homepage": "https://grammy.dev/",
   "repository": {
     "type": "git",
     "url": "https://github.com/grammyjs/grammY"
