--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -31,7 +31,7 @@ jobs:
           deno-version: v1.x
 
       - name: Cache Dependencies
-        run: deno cache platform.ts
+        run: deno cache src/platform.ts
         working-directory: deno
 
       - name: Run Tests
