--- a/node-backport/package.json
+++ b/node-backport/package.json
@@ -5,7 +5,7 @@
   "author": "KnorpelSenf",
   "license": "MIT",
   "engines": {
-    "node": ">=12.0.0"
+    "node": "^12.20.0 || >=14.13.1"
   },
   "homepage": "https://grammy.dev/",
   "repository": {
