Define .mjs extension as package.json module assumes cjs

--- a/node-backport/package.json
+++ b/node-backport/package.json
@@ -33,7 +33,7 @@
   ],
   "main": "./out/mod.js",
   "exports": {
-    "import": "./out/esm/wrapper.js",
+    "import": "./out/esm/wrapper.mjs",
     "require": "./out/mod.js"
   },
   "keywords": [
