--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -25,7 +25,7 @@ jobs:
         run: ./backport.sh --full
         working-directory: node-backport
 
-  test:
+  test-and-lint:
     runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
 
     strategy:
@@ -46,4 +46,8 @@ jobs:
 
       - name: Run Tests
         run: deno test --allow-env
+        working-directory: deno
+
+      - name: Run Linting
+        run: deno lint src/
         working-directory: deno
