Update @wojpawlik as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -43,7 +43,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/23058303?v=4",
       "profile": "https://github.com/wojpawlik",
       "contributions": [
-        "ideas"
+        "ideas",
+        "review"
       ]
     },
     {
