--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -92,7 +92,8 @@
       "profile": "https://edjopato.de/",
       "contributions": [
         "plugin",
-        "doc"
+        "doc",
+        "ideas"
       ]
     },
     {
@@ -101,7 +102,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/53701884?v=4",
       "profile": "https://github.com/Amir-Zouerami",
       "contributions": [
-        "doc"
+        "doc",
+        "plugin"
       ]
     },
     {
