--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -169,6 +169,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "code-withAshish",
+      "name": "code-withAshish",
+      "avatar_url": "https://avatars.githubusercontent.com/u/73625149?v=4",
+      "profile": "https://github.com/code-withAshish",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
