--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -187,6 +187,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "Asaku01",
+      "name": "Asaku01",
+      "avatar_url": "https://avatars.githubusercontent.com/u/29716396?v=4",
+      "profile": "https://github.com/Asaku01",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7,
