Add @ppsimn as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -194,6 +194,15 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/29716396?v=4",
       "profile": "https://github.com/Asaku01",
       "contributions": [
+        "doc"
+      ]
+    },
+    {
+      "login": "ppsimn",
+      "name": "ppsimn",
+      "avatar_url": "https://avatars.githubusercontent.com/u/88509883?v=4",
+      "profile": "https://github.com/ppsimn",
+      "contributions": [
         "bug"
       ]
     }
