--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -205,6 +205,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "Satont",
+      "name": "Satont",
+      "avatar_url": "https://avatars.githubusercontent.com/u/42675886?v=4",
+      "profile": "https://satont.js.org/",
+      "contributions": [
+        "plugin"
+      ]
     }
   ],
   "contributorsPerLine": 7,
