--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -120,7 +120,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/49933115?v=4",
       "profile": "https://github.com/rojserbest",
       "contributions": [
-        "doc"
+        "doc",
+        "review"
       ]
     },
     {
