--- a/node-backport/package.json
+++ b/node-backport/package.json
@@ -19,14 +19,13 @@
     "@grammyjs/types": "^2.2.6",
     "abort-controller": "^3.0.0",
     "debug": "^4.3.2",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.5"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
-    "@types/node": "^16.7.1",
+    "@types/node": "^16.10.2",
     "@types/node-fetch": "^2.5.12",
-    "ts-morph": "^11.0.3",
-    "typescript": "4.3.5"
+    "typescript": "^4.4.3"
   },
   "files": [
     "out/"
