--- a/node-backport/package.json
+++ b/node-backport/package.json
@@ -19,13 +19,13 @@
     "@grammyjs/types": "^2.2.6",
     "abort-controller": "^3.0.0",
     "debug": "^4.3.2",
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^2.6.5"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
-    "@types/node": "^16.9.1",
-    "ts-morph": "^12.0.0",
-    "typescript": "4.4.3"
+    "@types/node": "^12.20.27",
+    "@types/node-fetch": "^2.5.12",
+    "typescript": "^4.4.3"
   },
   "files": [
     "out/"
