--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -64,7 +64,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/11262022?v=4",
       "profile": "https://trgwii.no/",
       "contributions": [
-        "code"
+        "code",
+        "review"
       ]
     },
     {
@@ -168,7 +169,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/32808683?v=4",
       "profile": "https://lungers.com/",
       "contributions": [
-        "bug"
+        "bug",
+        "review"
       ]
     },
     {
