--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-  "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": { "source.fixAll": true },
-  "deno.enable": true
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": { "source.fixAll": true },
+    "deno.enable": true,
+    "deno.config": "./deno.json"
 }
