--- a/deno.json
+++ b/deno.json
@@ -10,6 +10,7 @@
         },
         "options": {
             "indentWidth": 4,
+            "singleQuote": true,
             "proseWrap": "preserve"
         }
     }
