Use Deno formatter instead of Prettier & reformat (#49)
Co-authored-by: KnorpelSenf <shtrog@gmail.com>

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -41,13 +41,10 @@ jobs:
           deno-version: v1.x
 
       - name: Cache Dependencies
-        run: deno cache src/platform.ts
-        working-directory: deno
+        run: deno cache deno/src/mod.ts
 
       - name: Run Tests
-        run: deno test --allow-env
-        working-directory: deno
+        run: deno test --allow-env --config deno.json deno
 
       - name: Run Linting
-        run: deno lint src/
-        working-directory: deno
+        run: deno lint --config deno.json deno
