--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,2 @@
-# Checkout CRLF on windows
-* text=auto
-# Apply this to text files
-*.ts text
-*.md text
-*.json text
-*.yml text
+# Never use CRLF
+* eol=lf
