Move to deno2node

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -9,42 +9,41 @@
 name: grammY
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    push:
+        branches: [main]
+    pull_request:
+        branches: [main]
 
 jobs:
-  backport:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup repo
-        uses: actions/checkout@v2
+    backport:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Setup repo
+              uses: actions/checkout@v2
 
-      - name: Run backporting script
-        run: ./backport.sh --full
-        working-directory: node-backport
+            - name: Run backporting
+              run: npm run backport
 
-  test-and-lint:
-    runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
+    test-and-lint:
+        runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
 
-    strategy:
-      matrix:
-        os: [macOS-latest, windows-latest, ubuntu-latest]
+        strategy:
+            matrix:
+                os: [macOS-latest, windows-latest, ubuntu-latest]
 
-    steps:
-      - name: Setup repo
-        uses: actions/checkout@v2
+        steps:
+            - name: Setup repo
+              uses: actions/checkout@v2
 
-      - uses: denoland/setup-deno@main
-        with:
-          deno-version: v1.x
+            - uses: denoland/setup-deno@main
+              with:
+                  deno-version: v1.x
 
-      - name: Cache Dependencies
-        run: deno cache deno/src/mod.ts
+            - name: Cache Dependencies
+              run: deno cache deno/src/mod.ts
 
-      - name: Run Tests
-        run: deno test --allow-env --config deno.json deno
+            - name: Run Tests
+              run: deno test --allow-env --config deno.json deno
 
-      - name: Run Linting
-        run: deno lint --config deno.json deno
+            - name: Run Linting
+              run: deno lint --config deno.json deno
