--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-    "recommendations": [
-        "denoland.vscode-deno",
-        "editorconfig.editorconfig"
-    ]
+    "recommendations": ["denoland.vscode-deno", "editorconfig.editorconfig"]
 }
