--- a/deno.json
+++ b/deno.json
@@ -1,16 +1,16 @@
 {
     "fmt": {
         "files": {
-            "exclude": [
-                "node-backport/node_modules",
-                "node-backport/src",
-                "node-backport/out",
-                "node-backport/package-lock.json"
-            ]
+            "exclude": ["./node_modules/", "./out/", "./package-lock.json"]
         },
         "options": {
             "indentWidth": 4,
             "proseWrap": "preserve"
+        }
+    },
+    "lint": {
+        "files": {
+            "exclude": ["./node_modules/", "./out/", "./package-lock.json"]
         }
     }
 }
