--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "url": "https://github.com/grammyjs/grammY"
     },
     "scripts": {
-        "build": "tsc"
+        "prepare": "npm run backport",
+        "backport": "deno2node tsconfig.json"
     },
     "dependencies": {
         "@grammyjs/types": "^2.2.6",
@@ -25,7 +26,7 @@
         "@types/debug": "^4.1.7",
         "@types/node": "^12.20.27",
         "@types/node-fetch": "^2.5.12",
-        "typescript": "^4.4.3"
+        "deno2node": "^1.0.0"
     },
     "files": [
         "out/"
