--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -21,6 +21,9 @@ jobs:
             - name: Setup repo
               uses: actions/checkout@v2
 
+            - name: Install dependencies
+              run: npm install
+
             - name: Run backporting
               run: npm run backport
 
