Credit @wojpawlik for deno2node

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -46,7 +46,9 @@
       "profile": "https://github.com/wojpawlik",
       "contributions": [
         "ideas",
-        "review"
+        "review",
+        "infra",
+        "platform"
       ]
     },
     {
