--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -52,6 +52,10 @@ jobs:
       - name: Setup repo
         uses: actions/checkout@v2
 
+      - uses: denoland/setup-deno@main
+        with:
+          deno-version: v1.x
+
       - name: Check Format
         run: deno fmt --config deno.json --check
 
