Check source code format in CI (#52)

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -25,7 +25,23 @@ jobs:
         run: ./backport.sh --full
         working-directory: node-backport
 
-  test-and-lint:
+  format-and-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup repo
+        uses: actions/checkout@v2
+
+      - uses: denoland/setup-deno@main
+        with:
+          deno-version: v1.x
+
+      - name: Check Format
+        run: deno fmt --config deno.json --check
+
+      - name: Lint
+        run: deno lint --config deno.json
+
+  test:
     runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
 
     strategy:
@@ -44,7 +60,4 @@ jobs:
         run: deno cache deno/src/mod.ts
 
       - name: Run Tests
-        run: deno test --allow-env --config deno.json deno
-
-      - name: Run Linting
-        run: deno lint --config deno.json deno
+        run: deno test --config deno.json --allow-env
