--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -22,7 +22,7 @@ jobs:
               uses: actions/checkout@v2
 
             - name: Install dependencies
-              run: npm install
+              run: npm install --ignore-scripts
 
             - name: Run backporting
               run: npm run backport
