Update @KnightNiwrem as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -81,7 +81,8 @@
         "plugin",
         "doc",
         "example",
-        "review"
+        "review",
+        "mentoring"
       ]
     },
     {
