--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -81,7 +81,8 @@
         "plugin",
         "doc",
         "example",
-        "review"
+        "review",
+        "mentoring"
       ]
     },
     {
@@ -239,7 +240,9 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/4936805?v=4",
       "profile": "https://github.com/dzek69",
       "contributions": [
-        "doc"
+        "doc",
+        "code",
+        "bug"
       ]
     },
     {
