Update @amberlionk as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -270,7 +270,8 @@
       "profile": "https://github.com/amberlionk",
       "contributions": [
         "review",
-        "bug"
+        "bug",
+        "code"
       ]
     }
   ],
