Add @chimit as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -303,6 +303,15 @@
         "ideas",
         "code"
       ]
+    },
+    {
+      "login": "chimit",
+      "name": "Chimit",
+      "avatar_url": "https://avatars.githubusercontent.com/u/839349?v=4",
+      "profile": "https://github.com/chimit",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
