Add @CalsiBotDev as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -312,6 +312,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "CalsiBotDev",
+      "name": "Calsi",
+      "avatar_url": "https://avatars.githubusercontent.com/u/55633371?v=4",
+      "profile": "https://github.com/CalsiBotDev",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
