Update @deptyped as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -232,7 +232,8 @@
       "contributions": [
         "example",
         "doc",
-        "tutorial"
+        "tutorial",
+        "question"
       ]
     },
     {
