--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "scripts": {
         "prepare": "npm run backport",
+        "cache": "deno cache src/mod.ts",
         "lint": "deno lint --config deno.json",
         "fmt": "deno fmt --config deno.json",
         "test": "deno test ./test/",
