Fix: PR comments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
         "module": "commonjs",
         "outDir": "./out/",
         "skipLibCheck": true,
-        "target": "es2019",
-        "esModuleInterop": true
+        "target": "es2019"
     },
     "include": ["src/"],
     "deno2node": {
