--- a/package.json
+++ b/package.json
@@ -22,14 +22,12 @@
         "@grammyjs/types": "^2.3.1",
         "abort-controller": "^3.0.0",
         "debug": "^4.3.2",
-        "node-fetch": "^2.6.5",
-        "tsscmp": "^1.0.6"
+        "node-fetch": "^2.6.5"
     },
     "devDependencies": {
         "@types/debug": "^4.1.7",
         "@types/node": "^12.20.36",
         "@types/node-fetch": "^2.5.12",
-        "@types/tsscmp": "^1.0.0",
         "deno2node": "^1.0.0"
     },
     "files": ["out/"],
