--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -127,7 +127,8 @@
       "contributions": [
         "doc",
         "review",
-        "infra"
+        "infra",
+        "translation"
       ]
     },
     {
@@ -340,7 +341,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/56839018?v=4",
       "profile": "https://zhemu.buzz/",
       "contributions": [
-        "doc"
+        "doc",
+        "translation"
       ]
     },
     {
@@ -349,7 +351,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/63894579?v=4",
       "profile": "https://github.com/JiquanWang99",
       "contributions": [
-        "doc"
+        "doc",
+        "translation"
       ]
     },
     {
@@ -367,7 +370,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/6434137?v=4",
       "profile": "https://blog.limx.dev/",
       "contributions": [
-        "doc"
+        "doc",
+        "translation"
       ]
     },
     {
@@ -376,7 +380,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/44166322?v=4",
       "profile": "https://github.com/taotie111",
       "contributions": [
-        "doc"
+        "doc",
+        "translation"
       ]
     },
     {
@@ -414,7 +419,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/44045911?v=4",
       "profile": "https://xuann.wang/",
       "contributions": [
-        "doc"
+        "doc",
+        "translation"
       ]
     }
   ],
