--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -423,6 +423,15 @@
         "doc",
         "translation"
       ]
+    },
+    {
+      "login": "slavafomin",
+      "name": "Slava Fomin II",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1702725?v=4",
+      "profile": "http://slava.fomin.io/",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7,
