Update @slavafomin as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -430,7 +430,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/1702725?v=4",
       "profile": "http://slava.fomin.io/",
       "contributions": [
-        "bug"
+        "bug",
+        "doc"
       ]
     }
   ],
