--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -38,10 +38,10 @@ jobs:
                   deno-version: v1.x
 
             - name: Check Format
-              run: deno fmt --config deno.json --check
+              run: npm run fmt -- --check
 
             - name: Lint
-              run: deno lint --config deno.json
+              run: npm run lint
 
     test:
         runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
@@ -59,10 +59,7 @@ jobs:
                   deno-version: v1.x
 
             - name: Cache Dependencies
-              run: deno cache src/mod.ts
+              run: npm run cache
 
             - name: Run Tests
-              run: deno test --config deno.json --allow-env
-
-            - name: Run Linting
-              run: deno lint --config deno.json
+              run: npm test
