--- a/.github/workflows/cdn.yml
+++ b/.github/workflows/cdn.yml
@@ -24,7 +24,7 @@ jobs:
             - name: Netlify deployment
               uses: nwtgck/actions-netlify@v1.2
               with:
-                  publish-dir: "./bundling/bundles"
+                  publish-dir: bundling/bundles
                   production-branch: main
               env:
                   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
