Add redirect for /

--- a/bundling/netlify.toml
+++ b/bundling/netlify.toml
@@ -2,3 +2,11 @@
 for = "/*"
 [headers.values]
 Access-Control-Allow-Origin = "*"
+
+[[redirects]]
+force = true # ensure that we always redirect
+from = "/" 
+headers = {X-From = "Netlify"} 
+signed = "API_SIGNATURE_TOKEN" 
+status = 200 
+to = "https://grammy.dev"
