--- a/.github/workflows/cdn.yml
+++ b/.github/workflows/cdn.yml
@@ -31,8 +31,9 @@ jobs:
             - name: Netlify deployment
               uses: nwtgck/actions-netlify@v1.2
               with:
-                  publish-dir: bundling
+                  publish-dir: "./bundling/bundles"
                   production-branch: main
+                  netlify-config-path: "./bundling/bundles/netlify.toml"
               env:
                   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
                   NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
