--- a/.github/workflows/cdn.yml
+++ b/.github/workflows/cdn.yml
@@ -33,6 +33,7 @@ jobs:
               with:
                   publish-dir: "./bundling/bundles"
                   production-branch: main
+                  production-deploy: false
                   netlify-config-path: "./bundling/bundles/netlify.toml"
               env:
                   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
