--- a/.github/workflows/cdn.yml
+++ b/.github/workflows/cdn.yml
@@ -3,6 +3,8 @@ name: cdn-builds
 on:
     push:
         branches: [main]
+    pull_request: # used for testing, will be removed before merging
+        branches: [main]
 
 jobs:
     deploy:
@@ -31,7 +33,7 @@ jobs:
               with:
                   publish-dir: "./bundling/bundles"
                   production-branch: main
-                  production-deploy: true
+                  production-deploy: false
                   netlify-config-path: "./bundling/bundles/netlify.toml"
               env:
                   NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
