--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -454,6 +454,15 @@
         "ideas",
         "review"
       ]
+    },
+    {
+      "login": "habemuscode",
+      "name": "Juan Luis Gutierrez Dos Santos",
+      "avatar_url": "https://avatars.githubusercontent.com/u/34692207?v=4",
+      "profile": "https://github.com/habemuscode",
+      "contributions": [
+        "review"
+      ]
     }
   ],
   "contributorsPerLine": 7,
