--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -457,7 +457,7 @@
     },
     {
       "login": "habemuscode",
-      "name": "Juan Luis Gutierrez Dos Santos",
+      "name": "Habemuscode",
       "avatar_url": "https://avatars.githubusercontent.com/u/34692207?v=4",
       "profile": "https://github.com/habemuscode",
       "contributions": [
