Update @dcdunkan as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -412,7 +412,9 @@
       "profile": "http://telegram.me/dcdunkan",
       "contributions": [
         "bug",
-        "code"
+        "code",
+        "plugin",
+        "review"
       ]
     },
     {
