Freeze node-fetch version

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@grammyjs/types": "^2.4.5",
         "abort-controller": "^3.0.0",
         "debug": "^4.3.3",
-        "node-fetch": "^2.6.5"
+        "node-fetch": "2.6.5"
     },
     "devDependencies": {
         "@types/debug": "^4.1.7",
