--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -21,12 +21,13 @@
         "doc",
         "design",
         "example",
-        "question",
         "test",
         "plugin",
         "platform",
         "review",
-        "mentoring"
+        "mentoring",
+        "projectManagement",
+        "infra"
       ]
     },
     {
@@ -36,7 +37,9 @@
       "profile": "https://github.com/Tecardo1",
       "contributions": [
         "plugin",
-        "userTesting"
+        "userTesting",
+        "example",
+        "doc"
       ]
     },
     {
@@ -48,7 +51,8 @@
         "ideas",
         "review",
         "infra",
-        "platform"
+        "platform",
+        "tool"
       ]
     },
     {
@@ -105,8 +109,7 @@
         "ideas",
         "review",
         "bug",
-        "code",
-        "question"
+        "code"
       ]
     },
     {
@@ -116,20 +119,23 @@
       "profile": "https://github.com/Amir-Zouerami",
       "contributions": [
         "doc",
-        "plugin"
+        "plugin",
+        "example"
       ]
     },
     {
-      "login": "rojserbest",
+      "login": "roj1512",
       "name": "Roj",
       "avatar_url": "https://avatars.githubusercontent.com/u/49933115?v=4",
-      "profile": "https://github.com/rojserbest",
+      "profile": "https://github.com/roj1512",
       "contributions": [
         "doc",
         "review",
         "infra",
         "translation",
-        "code"
+        "code",
+        "ideas",
+        "mentoring"
       ]
     },
     {
@@ -223,7 +229,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/42675886?v=4",
       "profile": "https://satont.js.org/",
       "contributions": [
-        "plugin"
+        "plugin",
+        "doc"
       ]
     },
     {
@@ -234,8 +241,7 @@
       "contributions": [
         "example",
         "doc",
-        "tutorial",
-        "question"
+        "tutorial"
       ]
     },
     {
@@ -414,7 +420,8 @@
         "bug",
         "code",
         "plugin",
-        "review"
+        "review",
+        "doc"
       ]
     },
     {
@@ -463,7 +470,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/34692207?v=4",
       "profile": "https://github.com/habemuscode",
       "contributions": [
-        "review"
+        "review",
+        "doc"
       ]
     },
     {
@@ -493,6 +501,15 @@
       "contributions": [
         "bug",
         "code"
+      ]
+    },
+    {
+      "login": "lmx-Hexagram",
+      "name": "lmx-Hexagram",
+      "avatar_url": "https://avatars.githubusercontent.com/u/52130356?v=4",
+      "profile": "https://github.com/lmx-Hexagram",
+      "contributions": [
+        "doc"
       ]
     }
   ],
