Add @Scrip7 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -542,6 +542,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "Scrip7",
+      "name": "Hesoyam",
+      "avatar_url": "https://avatars.githubusercontent.com/u/37535505?v=4",
+      "profile": "https://youtu.be/dQw4w9WgXcQ",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
