Fix profile link of @Scrip7

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -547,7 +547,7 @@
       "login": "Scrip7",
       "name": "Hesoyam",
       "avatar_url": "https://avatars.githubusercontent.com/u/37535505?v=4",
-      "profile": "https://youtu.be/dQw4w9WgXcQ",
+      "profile": "https://github.com/Scrip7",
       "contributions": [
         "doc"
       ]
