--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -473,7 +473,8 @@
       "profile": "https://github.com/habemuscode",
       "contributions": [
         "review",
-        "doc"
+        "doc",
+        "translation"
       ]
     },
     {
