--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -174,7 +174,10 @@
       "contributions": [
         "doc",
         "bug",
-        "ideas"
+        "ideas",
+        "design",
+        "question",
+        "review"
       ]
     },
     {
@@ -423,7 +426,9 @@
         "code",
         "plugin",
         "review",
-        "doc"
+        "doc",
+        "ideas",
+        "infra"
       ]
     },
     {
@@ -579,6 +584,24 @@
       "profile": "https://rys.pw",
       "contributions": [
         "doc"
+      ]
+    },
+    {
+      "login": "PavelPolyakov",
+      "name": "Pavel",
+      "avatar_url": "https://avatars.githubusercontent.com/u/839290?v=4",
+      "profile": "http://pavelpolyakov.com/",
+      "contributions": [
+        "example"
+      ]
+    },
+    {
+      "login": "thorwebdev",
+      "name": "Thor 雷神 Schaeff",
+      "avatar_url": "https://avatars.githubusercontent.com/u/5748289?v=4",
+      "profile": "https://youtube.com/thorwebdev",
+      "contributions": [
+        "example"
       ]
     }
   ],
