--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -610,7 +610,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/75589380?v=4",
       "profile": "https://github.com/x066it",
       "contributions": [
-        "bug"
+        "bug",
+        "review"
       ]
     }
   ],
