--- a/.github/workflows/cdn.yml
+++ b/.github/workflows/cdn.yml
@@ -13,7 +13,7 @@ jobs:
 
             - uses: denoland/setup-deno@main
               with:
-                  deno-version: v1.21
+                  deno-version: v1.x
 
             - name: Bundle
               run: ./bundle-all.sh
