--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -35,7 +35,7 @@ jobs:
 
             - uses: denoland/setup-deno@main
               with:
-                  deno-version: v1.21
+                  deno-version: v1.x
 
             - name: Check Format
               run: npm run fmt -- --check
@@ -56,7 +56,7 @@ jobs:
 
             - uses: denoland/setup-deno@main
               with:
-                  deno-version: v1.21
+                  deno-version: v1.x
 
             - name: Cache Dependencies
               run: npm run cache
