--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -1,8 +1,10 @@
 name: Lint Commit Messages
 
 on:
-    - pull_request
-    - push
+    push:
+        branches: [main]
+    pull_request:
+        branches: [main]
 
 jobs:
     commitlint:
