chore: release only on the tag creations of main

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,11 @@ name: Main
 on:
     push:
         tags:
-            - "v*.*.*"
+            - "*"
 
 jobs:
     build:
+        if: github.event.base_ref == 'refs/heads/main'
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
